initial/gen/MCParser.py
# Generated from F:/assignment2/initial/src/main/mc/parser\MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'boolean'", "'break'", "'continue'", "'if'", "'else'", 
                     "'for'", "'float'", "'int'", "'string'", "'return'", 
                     "'void'", "'do'", "'while'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'!'", "'%'", "'||'", "'&&'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'='", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENTS", "COMMENT", "BOOLEAN", 
                      "BREAK", "CONTINUE", "IF", "ELSE", "FOR", "FLOAT", 
                      "INT", "STRING", "RETURN", "VOID", "DO", "WHILE", 
                      "ID", "ADD", "SUB", "MUL", "DIV", "NOT", "MODULE", 
                      "OR", "AND", "NEQ", "EQ", "LSS", "GRR", "LSSEQ", "GRREQ", 
                      "ASN", "LB", "RB", "LP", "RP", "LQ", "RQ", "SM", "CM", 
                      "INTLIT", "FLOATLIT", "BOOLIT", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_dec = 1
    RULE_var_dec = 2
    RULE_var = 3
    RULE_primtype = 4
    RULE_func_dec = 5
    RULE_types = 6
    RULE_pointertype = 7
    RULE_list_para = 8
    RULE_para_dec = 9
    RULE_block_stmt = 10
    RULE_block_member = 11
    RULE_stmt = 12
    RULE_if_stmt = 13
    RULE_while_stmt = 14
    RULE_for_stmt = 15
    RULE_break_stmt = 16
    RULE_continue_stmt = 17
    RULE_return_stmt = 18
    RULE_exp_stmt = 19
    RULE_exp = 20
    RULE_exp1 = 21
    RULE_exp2 = 22
    RULE_exp3 = 23
    RULE_exp4 = 24
    RULE_exp5 = 25
    RULE_exp6 = 26
    RULE_exp7 = 27
    RULE_exp8 = 28
    RULE_exp9 = 29
    RULE_operand = 30

    ruleNames =  [ "program", "dec", "var_dec", "var", "primtype", "func_dec", 
                   "types", "pointertype", "list_para", "para_dec", "block_stmt", 
                   "block_member", "stmt", "if_stmt", "while_stmt", "for_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "exp_stmt", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "operand" ]

    EOF = Token.EOF
    WS=1
    COMMENTS=2
    COMMENT=3
    BOOLEAN=4
    BREAK=5
    CONTINUE=6
    IF=7
    ELSE=8
    FOR=9
    FLOAT=10
    INT=11
    STRING=12
    RETURN=13
    VOID=14
    DO=15
    WHILE=16
    ID=17
    ADD=18
    SUB=19
    MUL=20
    DIV=21
    NOT=22
    MODULE=23
    OR=24
    AND=25
    NEQ=26
    EQ=27
    LSS=28
    GRR=29
    LSSEQ=30
    GRREQ=31
    ASN=32
    LB=33
    RB=34
    LP=35
    RP=36
    LQ=37
    RQ=38
    SM=39
    CM=40
    INTLIT=41
    FLOATLIT=42
    BOOLIT=43
    STRINGLIT=44
    UNCLOSE_STRING=45
    ILLEGAL_ESCAPE=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DecContext)
            else:
                return self.getTypedRuleContext(MCParser.DecContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.dec()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING) | (1 << MCParser.VOID))) != 0)):
                    break

            self.state = 67
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MCParser.Var_decContext,0)


        def func_dec(self):
            return self.getTypedRuleContext(MCParser.Func_decContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec" ):
                listener.enterDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec" ):
                listener.exitDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec" ):
                return visitor.visitDec(self)
            else:
                return visitor.visitChildren(self)




    def dec(self):

        localctx = MCParser.DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dec)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.var_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.func_dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def SM(self):
            return self.getToken(MCParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec" ):
                listener.enterVar_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec" ):
                listener.exitVar_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MCParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.primtype()
            self.state = 74
            self.var()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 75
                self.match(MCParser.CM)
                self.state = 76
                self.var()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(MCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LQ(self):
            return self.getToken(MCParser.LQ, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RQ(self):
            return self.getToken(MCParser.RQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(MCParser.ID)
                self.state = 85
                self.match(MCParser.LQ)
                self.state = 86
                self.match(MCParser.INTLIT)
                self.state = 87
                self.match(MCParser.RQ)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(MCParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primtype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimtype" ):
                listener.enterPrimtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimtype" ):
                listener.exitPrimtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimtype" ):
                return visitor.visitPrimtype(self)
            else:
                return visitor.visitChildren(self)




    def primtype(self):

        localctx = MCParser.PrimtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MCParser.TypesContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MCParser.Block_stmtContext,0)


        def list_para(self):
            return self.getTypedRuleContext(MCParser.List_paraContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_dec" ):
                listener.enterFunc_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_dec" ):
                listener.exitFunc_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_dec" ):
                return visitor.visitFunc_dec(self)
            else:
                return visitor.visitChildren(self)




    def func_dec(self):

        localctx = MCParser.Func_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.types()
            self.state = 94
            self.match(MCParser.ID)
            self.state = 95
            self.match(MCParser.LB)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING))) != 0):
                self.state = 96
                self.list_para()


            self.state = 99
            self.match(MCParser.RB)
            self.state = 100
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def pointertype(self):
            return self.getTypedRuleContext(MCParser.PointertypeContext,0)


        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MCParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_types)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.primtype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.pointertype()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(MCParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointertypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def LQ(self):
            return self.getToken(MCParser.LQ, 0)

        def RQ(self):
            return self.getToken(MCParser.RQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_pointertype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointertype" ):
                listener.enterPointertype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointertype" ):
                listener.exitPointertype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointertype" ):
                return visitor.visitPointertype(self)
            else:
                return visitor.visitChildren(self)




    def pointertype(self):

        localctx = MCParser.PointertypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pointertype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.primtype()
            self.state = 108
            self.match(MCParser.LQ)
            self.state = 109
            self.match(MCParser.RQ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Para_decContext)
            else:
                return self.getTypedRuleContext(MCParser.Para_decContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_list_para

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_para" ):
                listener.enterList_para(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_para" ):
                listener.exitList_para(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_para" ):
                return visitor.visitList_para(self)
            else:
                return visitor.visitChildren(self)




    def list_para(self):

        localctx = MCParser.List_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.para_dec()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 112
                self.match(MCParser.CM)
                self.state = 113
                self.para_dec()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LQ(self):
            return self.getToken(MCParser.LQ, 0)

        def RQ(self):
            return self.getToken(MCParser.RQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPara_dec" ):
                listener.enterPara_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPara_dec" ):
                listener.exitPara_dec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_dec" ):
                return visitor.visitPara_dec(self)
            else:
                return visitor.visitChildren(self)




    def para_dec(self):

        localctx = MCParser.Para_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.primtype()
            self.state = 120
            self.match(MCParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LQ:
                self.state = 121
                self.match(MCParser.LQ)
                self.state = 122
                self.match(MCParser.RQ)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def block_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Block_memberContext)
            else:
                return self.getTypedRuleContext(MCParser.Block_memberContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_stmt" ):
                listener.enterBlock_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_stmt" ):
                listener.exitBlock_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_stmt" ):
                return visitor.visitBlock_stmt(self)
            else:
                return visitor.visitChildren(self)




    def block_stmt(self):

        localctx = MCParser.Block_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MCParser.LP)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.IF) | (1 << MCParser.FOR) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLIT) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 126
                self.block_member()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_memberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MCParser.Var_decContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_block_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_member" ):
                listener.enterBlock_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_member" ):
                listener.exitBlock_member(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_member" ):
                return visitor.visitBlock_member(self)
            else:
                return visitor.visitChildren(self)




    def block_member(self):

        localctx = MCParser.Block_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block_member)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.FLOAT, MCParser.INT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.var_dec()
                pass
            elif token in [MCParser.BREAK, MCParser.CONTINUE, MCParser.IF, MCParser.FOR, MCParser.RETURN, MCParser.DO, MCParser.ID, MCParser.SUB, MCParser.NOT, MCParser.LB, MCParser.LP, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLIT, MCParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(MCParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MCParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MCParser.While_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MCParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MCParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MCParser.Return_stmtContext,0)


        def exp_stmt(self):
            return self.getTypedRuleContext(MCParser.Exp_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MCParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_stmt

